Source/ISS/Development/PawsSupport/Devices/Bus_1553/Atlas/Remote PC test software/Include/BTI717NET.VB


    Private Class BTI717_64
        Public Declare Function BTI717_ChClear Lib "BTI71764.DLL" Alias "BTI717_ChClear" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI717_ChConfig Lib "BTI71764.DLL" Alias "BTI717_ChConfig" (ByVal configval As UInt32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Sub BTI717_ChGetCount Lib "BTI71764.DLL" Alias "BTI717_ChGetCount" (ByRef rcvcount As Int32, ByRef xmtcount As Int32, ByVal handleval As IntPtr)
        Public Declare Function BTI717_ChGetInfo Lib "BTI71764.DLL" Alias "BTI717_ChGetInfo" (ByVal infotype As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTI717_ChIs717 Lib "BTI71764.DLL" Alias "BTI717_ChIs717" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI717_ChIsBiPhase Lib "BTI71764.DLL" Alias "BTI717_ChIsBiPhase" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI717_ChIsRcv Lib "BTI71764.DLL" Alias "BTI717_ChIsRcv" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI717_ChIsSelEnc Lib "BTI71764.DLL" Alias "BTI717_ChIsSelEnc" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI717_ChIsType Lib "BTI71764.DLL" Alias "BTI717_ChIsType" (ByVal configval As UInt32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI717_ChIsXmt Lib "BTI71764.DLL" Alias "BTI717_ChIsXmt" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Sub BTI717_ChPause Lib "BTI71764.DLL" Alias "BTI717_ChPause" (ByVal channum As Int32, ByVal handleval As IntPtr)
        Public Declare Function BTI717_ChPauseCheck Lib "BTI71764.DLL" Alias "BTI717_ChPauseCheck" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Sub BTI717_ChResume Lib "BTI71764.DLL" Alias "BTI717_ChResume" (ByVal channum As Int32, ByVal handleval As IntPtr)
        Public Declare Function BTI717_ChStart Lib "BTI71764.DLL" Alias "BTI717_ChStart" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI717_ChStatus Lib "BTI71764.DLL" Alias "BTI717_ChStatus" (ByVal buf As UInt16(), ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI717_ChStop Lib "BTI71764.DLL" Alias "BTI717_ChStop" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI717_ChSyncDefine Lib "BTI71764.DLL" Alias "BTI717_ChSyncDefine" (ByVal enableflag As Int32, ByVal syncmask As UInt16, ByVal pinpolarity As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI717_ChTriggerDefine Lib "BTI71764.DLL" Alias "BTI717_ChTriggerDefine" (ByVal enableflag As Int32, ByVal trigmask As UInt16, ByVal trigval As UInt16, ByVal pinpolarity As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI717_ParamAmplitudeConfig Lib "BTI71764.DLL" Alias "BTI717_ParamAmplitudeConfig" (ByVal configval As UInt32, ByVal dacval As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI717_ParamAmplitudeGet Lib "BTI71764.DLL" Alias "BTI717_ParamAmplitudeGet" (ByRef dacval As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI717_SubFrmBlkRd Lib "BTI71764.DLL" Alias "BTI717_SubFrmBlkRd" (ByVal databuf As UInt16(), ByVal subframe As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI717_SubFrmBlkWr Lib "BTI71764.DLL" Alias "BTI717_SubFrmBlkWr" (ByVal databuf As UInt16(), ByVal subframe As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI717_SubFrmStatus Lib "BTI71764.DLL" Alias "BTI717_SubFrmStatus" (ByVal buf As UInt16(), ByVal subframe As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI717_SubFrmSyncDefine Lib "BTI71764.DLL" Alias "BTI717_SubFrmSyncDefine" (ByVal enableflag As Int32, ByVal syncmask As UInt16, ByVal pinpolarity As UInt16, ByVal subframe As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI717_SubFrmTriggerDefine Lib "BTI71764.DLL" Alias "BTI717_SubFrmTriggerDefine" (ByVal enableflag As Int32, ByVal trigmask As UInt16, ByVal trigval As UInt16, ByVal pinpolarity As UInt16, ByVal subframe As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI717_SubFrmWordConfig Lib "BTI71764.DLL" Alias "BTI717_SubFrmWordConfig" (ByVal configval As UInt32, ByVal subframe As Int32, ByVal word As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI717_SubFrmWordRd Lib "BTI71764.DLL" Alias "BTI717_SubFrmWordRd" (ByRef value As UInt16, ByVal subframe As Int32, ByVal word As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI717_SubFrmWordWr Lib "BTI71764.DLL" Alias "BTI717_SubFrmWordWr" (ByVal value As UInt16, ByVal subframe As Int32, ByVal word As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI717_SuperFrmConfig Lib "BTI71764.DLL" Alias "BTI717_SuperFrmConfig" (ByVal count As Int32, ByVal framespersuperframe As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI717_SuperFrmCounterPos Lib "BTI71764.DLL" Alias "BTI717_SuperFrmCounterPos" (ByVal subframe As Int32, ByVal word As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI717_SuperFrmCounterPosEx Lib "BTI71764.DLL" Alias "BTI717_SuperFrmCounterPosEx" (ByVal subframe As Int32, ByVal word As Int32, ByVal msb As Int32, ByVal lsb As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI717_SuperFrmDefine Lib "BTI71764.DLL" Alias "BTI717_SuperFrmDefine" (ByVal subframe As Int32, ByVal word As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTI717_SuperFrmWordConfig Lib "BTI71764.DLL" Alias "BTI717_SuperFrmWordConfig" (ByVal configval As UInt32, ByVal superfrmnum As Int32, ByVal superfrmaddr As UInt32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI717_SuperFrmWordRd Lib "BTI71764.DLL" Alias "BTI717_SuperFrmWordRd" (ByRef value As UInt16, ByVal superfrmnum As Int32, ByVal superfrmaddr As UInt32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI717_SuperFrmWordWr Lib "BTI71764.DLL" Alias "BTI717_SuperFrmWordWr" (ByVal value As UInt16, ByVal superfrmnum As Int32, ByVal superfrmaddr As UInt32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI717_SyncTest Lib "BTI71764.DLL" Alias "BTI717_SyncTest" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI717_SyncValRd Lib "BTI71764.DLL" Alias "BTI717_SyncValRd" (ByRef syncword1 As Int32, ByRef syncword2 As Int32, ByRef syncword3 As Int32, ByRef syncword4 As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI717_SyncValWr Lib "BTI71764.DLL" Alias "BTI717_SyncValWr" (ByVal syncword1 As Int32, ByVal syncword2 As Int32, ByVal syncword3 As Int32, ByVal syncword4 As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI717_ChCreate Lib "BTI71764.DLL" Alias "BTI717_ChCreate" (ByVal channum As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTI717_ChReset Lib "BTI71764.DLL" Alias "BTI717_ChReset" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI717_DllUsageCount Lib "BTI71764.DLL" Alias "BTI717_DllUsageCount" () As Int32
        Public Declare Sub BTI717_GetChanCount Lib "BTI71764.DLL" Alias "BTI717_GetChanCount" (ByRef rcvcount As Int32, ByRef xmtcount As Int32, ByVal handleval As IntPtr)
        Public Declare Function BTI717_IsBiPhaseChan Lib "BTI71764.DLL" Alias "BTI717_IsBiPhaseChan" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI717_IsChan Lib "BTI71764.DLL" Alias "BTI717_IsChan" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI717_IsRcvChan Lib "BTI71764.DLL" Alias "BTI717_IsRcvChan" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI717_IsXmtChan Lib "BTI71764.DLL" Alias "BTI717_IsXmtChan" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI717_SubFrmAddr Lib "BTI71764.DLL" Alias "BTI717_SubFrmAddr" (ByVal subframe As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTI717_SubFrmBlkRdEx Lib "BTI71764.DLL" Alias "BTI717_SubFrmBlkRdEx" (ByRef subfrmdata As SUBFRMFIELDS717, ByVal subframe As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI717_SubFrmBlkWrEx Lib "BTI71764.DLL" Alias "BTI717_SubFrmBlkWrEx" (ByRef subfrmdata As SUBFRMFIELDS717, ByVal subframe As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI717_SubFrmCreate Lib "BTI71764.DLL" Alias "BTI717_SubFrmCreate" (ByVal configval As UInt32, ByVal subframe As Int32, ByVal chanbase As UInt32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI717_SubFrmReset Lib "BTI71764.DLL" Alias "BTI717_SubFrmReset" (ByVal subframe As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI717_SuperFrmBaseAddr Lib "BTI71764.DLL" Alias "BTI717_SuperFrmBaseAddr" (ByVal channum As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTI717_SuperFrmConfigEx Lib "BTI71764.DLL" Alias "BTI717_SuperFrmConfigEx" (ByVal configval As UInt32, ByVal count As Int32, ByVal framespersuperframe As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI717_SuperFrmReset Lib "BTI71764.DLL" Alias "BTI717_SuperFrmReset" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI717_SyncValPtrInit Lib "BTI71764.DLL" Alias "BTI717_SyncValPtrInit" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI717_TestProtocol Lib "BTI71764.DLL" Alias "BTI717_TestProtocol" (ByVal handleval As IntPtr) As Int32
    End Class
